log
Sat, May  3, 2025  6:01:12 PM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  6:13:02 PM: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  3|7
total_score: 5/70
1d982ed
Sat, May  3, 2025  7:05:20 PM: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:9: error: implicit declaration of function 'searhTreeMap' [-Werror=implicit-function-declaration]
     if (searhTreeMap(tree, key) != NULL) return;
         ^~~~~~~~~~~~
treemap.c:52:33: error: comparison between pointer and integer [-Werror]
     if (searhTreeMap(tree, key) != NULL) return;
                                 ^~
treemap.c: At top level:
treemap.c:113:5: error: expected identifier or '(' before 'return'
     return NULL;
     ^~~~~~
treemap.c: In function 'searchTreeMap':
treemap.c:112:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
43b8b8d
Sat, May  3, 2025  7:06:14 PM: 
 treemap.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:9: error: implicit declaration of function 'searhTreeMap' [-Werror=implicit-function-declaration]
     if (searhTreeMap(tree, key) != NULL) return;
         ^~~~~~~~~~~~
treemap.c:52:33: error: comparison between pointer and integer [-Werror]
     if (searhTreeMap(tree, key) != NULL) return;
                                 ^~
cc1.exe: all warnings being treated as errors
1b600b7
Sat, May  3, 2025  7:07:14 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:9: error: implicit declaration of function 'searhTreeMap' [-Werror=implicit-function-declaration]
     if (searhTreeMap(tree, key)) return;
         ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
78718f1
Sat, May  3, 2025  7:29:44 PM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
1732082
Sat, May  3, 2025  7:32:29 PM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  14|5
total_score: 15/70
32045f1
Sat, May  3, 2025  7:41:05 PM: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:128:45: error: implicit declaration of function 'retur' [-Werror=implicit-function-declaration]
     if (tree == NULL || tree->root == NULL) retur NULL;
                                             ^~~~~
cc1.exe: all warnings being treated as errors
b53df7b
Sat, May  3, 2025  7:41:22 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 20/70
1634932
Sat, May  3, 2025  7:52:28 PM: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  21|3
total_score: 35/70
2826fb3
